--- a/src/components/Shop/ProductItem.module.css
+++ b/src/components/Shop/ProductItem.module.css
@@ -1,20 +1,23 @@
+.item {
+  border: 1px solid #f0f0f0;
+  background-color: white;
+  width: 500px;
+  padding: 20px;
+  margin: 0 auto;
+}
+
 .item h3 {
   margin: 0.5rem 0;
   font-size: 1.25rem;
 }
 
-.item header {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-}
-
 .price {
+  width: 70px;
   border-radius: 30px;
-  padding: 0.15rem 1.5rem;
   background-color: #3a3a3a;
   color: white;
   font-size: 1.5rem;
+  text-align: center;
 }
 
 .item p {
